--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a4ec24f7",
+   "id": "80917e3e",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d862aea2",
+   "id": "1ec99dbc",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f0620c6",
+   "id": "3d6f4d47",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1744c30",
+   "id": "7444d4f0",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aa4db98",
+   "id": "7d29ca40",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "310856a2",
+   "id": "ecc4d8d6",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f455d931",
+   "id": "f631265a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T12:26:54.565584Z",
-     "iopub.status.busy": "2025-02-04T12:26:54.565410Z",
-     "iopub.status.idle": "2025-02-04T12:26:58.036351Z",
-     "shell.execute_reply": "2025-02-04T12:26:58.035706Z"
+     "iopub.execute_input": "2025-02-04T12:30:30.444447Z",
+     "iopub.status.busy": "2025-02-04T12:30:30.444009Z",
+     "iopub.status.idle": "2025-02-04T12:30:33.403139Z",
+     "shell.execute_reply": "2025-02-04T12:30:33.402532Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "129ea3f9",
+   "id": "b2d50de2",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66a45047",
+   "id": "12aaa223",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d36f3db4",
+   "id": "72d45767",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99b90057",
+   "id": "020830ba",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c2e87f6",
+   "id": "09ea2f51",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7eb9731",
+   "id": "02bf529c",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53755008",
+   "id": "8f2887ac",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f57f15",
+   "id": "cad4b1c1",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "71d9515a",
+   "id": "dd9ca1a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T12:26:58.038974Z",
-     "iopub.status.busy": "2025-02-04T12:26:58.038436Z",
-     "iopub.status.idle": "2025-02-04T12:27:00.267595Z",
-     "shell.execute_reply": "2025-02-04T12:27:00.267033Z"
+     "iopub.execute_input": "2025-02-04T12:30:33.405237Z",
+     "iopub.status.busy": "2025-02-04T12:30:33.404977Z",
+     "iopub.status.idle": "2025-02-04T12:30:35.303478Z",
+     "shell.execute_reply": "2025-02-04T12:30:35.302895Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6657b7ba",
+   "id": "dec2df8c",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fb84d5fd",
+   "id": "a1cb2817",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T12:27:00.269479Z",
-     "iopub.status.busy": "2025-02-04T12:27:00.269277Z",
-     "iopub.status.idle": "2025-02-04T12:27:00.272759Z",
-     "shell.execute_reply": "2025-02-04T12:27:00.272109Z"
+     "iopub.execute_input": "2025-02-04T12:30:35.305442Z",
+     "iopub.status.busy": "2025-02-04T12:30:35.305077Z",
+     "iopub.status.idle": "2025-02-04T12:30:35.308690Z",
+     "shell.execute_reply": "2025-02-04T12:30:35.308111Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e78441b2",
+   "id": "a2be843d",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79fc1ca4",
+   "id": "0093b68f",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05a2839e",
+   "id": "98d5047f",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1297104a",
+   "id": "b417dd88",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aba055cc",
+   "id": "f98cd9f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T12:27:00.274875Z",
-     "iopub.status.busy": "2025-02-04T12:27:00.274506Z",
-     "iopub.status.idle": "2025-02-04T12:27:00.320936Z",
-     "shell.execute_reply": "2025-02-04T12:27:00.320410Z"
+     "iopub.execute_input": "2025-02-04T12:30:35.310576Z",
+     "iopub.status.busy": "2025-02-04T12:30:35.310170Z",
+     "iopub.status.idle": "2025-02-04T12:30:35.352977Z",
+     "shell.execute_reply": "2025-02-04T12:30:35.352485Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e894ed8",
+   "id": "b7aa798c",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "60e0ff94",
+   "id": "0e8f9d07",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T12:27:00.322810Z",
-     "iopub.status.busy": "2025-02-04T12:27:00.322617Z",
-     "iopub.status.idle": "2025-02-04T12:27:00.396541Z",
-     "shell.execute_reply": "2025-02-04T12:27:00.395908Z"
+     "iopub.execute_input": "2025-02-04T12:30:35.354898Z",
+     "iopub.status.busy": "2025-02-04T12:30:35.354545Z",
+     "iopub.status.idle": "2025-02-04T12:30:35.420483Z",
+     "shell.execute_reply": "2025-02-04T12:30:35.419969Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6ed9a1e",
+   "id": "3ff7ecd9",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c598f31e",
+   "id": "0c2172c0",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3350b9a3",
+   "id": "a82cdef0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T12:27:00.398444Z",
-     "iopub.status.busy": "2025-02-04T12:27:00.398269Z",
-     "iopub.status.idle": "2025-02-04T12:27:00.428872Z",
-     "shell.execute_reply": "2025-02-04T12:27:00.428317Z"
+     "iopub.execute_input": "2025-02-04T12:30:35.422463Z",
+     "iopub.status.busy": "2025-02-04T12:30:35.422113Z",
+     "iopub.status.idle": "2025-02-04T12:30:35.448167Z",
+     "shell.execute_reply": "2025-02-04T12:30:35.447688Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b84889a",
+   "id": "d4abbe46",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd707ed8",
+   "id": "7424c731",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bc431e6",
+   "id": "a2708767",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b64698c9",
+   "id": "29087776",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccf87f2c",
+   "id": "f5fb9bc0",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5cfeb471",
+   "id": "df336362",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T12:27:00.430932Z",
-     "iopub.status.busy": "2025-02-04T12:27:00.430709Z",
-     "iopub.status.idle": "2025-02-04T12:27:00.435049Z",
-     "shell.execute_reply": "2025-02-04T12:27:00.434554Z"
+     "iopub.execute_input": "2025-02-04T12:30:35.449982Z",
+     "iopub.status.busy": "2025-02-04T12:30:35.449801Z",
+     "iopub.status.idle": "2025-02-04T12:30:35.454164Z",
+     "shell.execute_reply": "2025-02-04T12:30:35.453546Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8243e50d",
+   "id": "e55ed7b2",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2060b5dd",
+   "id": "f046af33",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T12:27:00.436989Z",
-     "iopub.status.busy": "2025-02-04T12:27:00.436622Z",
-     "iopub.status.idle": "2025-02-04T12:27:00.439635Z",
-     "shell.execute_reply": "2025-02-04T12:27:00.439132Z"
+     "iopub.execute_input": "2025-02-04T12:30:35.455933Z",
+     "iopub.status.busy": "2025-02-04T12:30:35.455758Z",
+     "iopub.status.idle": "2025-02-04T12:30:35.458608Z",
+     "shell.execute_reply": "2025-02-04T12:30:35.458071Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22eece2d",
+   "id": "ce5ebd15",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "17915cd9",
+   "id": "0f8f452e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T12:27:00.441729Z",
-     "iopub.status.busy": "2025-02-04T12:27:00.441280Z",
-     "iopub.status.idle": "2025-02-04T12:27:03.165431Z",
-     "shell.execute_reply": "2025-02-04T12:27:03.164820Z"
+     "iopub.execute_input": "2025-02-04T12:30:35.460540Z",
+     "iopub.status.busy": "2025-02-04T12:30:35.460077Z",
+     "iopub.status.idle": "2025-02-04T12:30:38.011083Z",
+     "shell.execute_reply": "2025-02-04T12:30:38.010547Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26531333",
+   "id": "94c6572a",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2196938",
+   "id": "55de2315",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c3d9265",
+   "id": "c813ed1f",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "742043bc",
+   "id": "4996ccb4",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8b5d07f0",
+   "id": "4b99f133",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T12:27:03.167623Z",
-     "iopub.status.busy": "2025-02-04T12:27:03.167155Z",
-     "iopub.status.idle": "2025-02-04T12:27:03.170999Z",
-     "shell.execute_reply": "2025-02-04T12:27:03.170303Z"
+     "iopub.execute_input": "2025-02-04T12:30:38.013109Z",
+     "iopub.status.busy": "2025-02-04T12:30:38.012771Z",
+     "iopub.status.idle": "2025-02-04T12:30:38.016506Z",
+     "shell.execute_reply": "2025-02-04T12:30:38.015956Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fb2738dbe20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f90cfb2be20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acce8a4b",
+   "id": "3af4e734",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc460292",
+   "id": "eb7fe693",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e3f0fc2",
+   "id": "d60ae416",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeef29b5",
+   "id": "2b7b61de",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3cd5c81e",
+   "id": "ad1678ad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T12:27:03.172924Z",
-     "iopub.status.busy": "2025-02-04T12:27:03.172566Z",
-     "iopub.status.idle": "2025-02-04T12:27:03.175687Z",
-     "shell.execute_reply": "2025-02-04T12:27:03.175195Z"
+     "iopub.execute_input": "2025-02-04T12:30:38.018365Z",
+     "iopub.status.busy": "2025-02-04T12:30:38.018193Z",
+     "iopub.status.idle": "2025-02-04T12:30:38.021137Z",
+     "shell.execute_reply": "2025-02-04T12:30:38.020675Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "66b1d707",
+   "id": "513e1277",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T12:27:03.177477Z",
-     "iopub.status.busy": "2025-02-04T12:27:03.177106Z",
-     "iopub.status.idle": "2025-02-04T12:27:04.258763Z",
-     "shell.execute_reply": "2025-02-04T12:27:04.258192Z"
+     "iopub.execute_input": "2025-02-04T12:30:38.022750Z",
+     "iopub.status.busy": "2025-02-04T12:30:38.022519Z",
+     "iopub.status.idle": "2025-02-04T12:30:39.080667Z",
+     "shell.execute_reply": "2025-02-04T12:30:39.080116Z"
     }
    },
    "outputs": [
